13-Kubernetes-Ingress/aks-cicd-app-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: aks-cicd-app-ingress
  namespace: portfolio-app
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /aks-app(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: aks-cicd-app-service
                port:
                  number: 80
