13-Kubernetes-Ingress/task-manager-ingress-host.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: task-manager-ingress-host
  namespace: task-manager
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  rules:
    - host: task-manager.example.com
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: frontend-service
              port:
                number: 80
    - host: api-service.example.com
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: api-service
              port:
                number: 4000
    - host: notification-service.example.com
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: notification-service
              port:
                number: 5000
